Fixed collapse section title style

--- a/collapse-section/collapse-section.less
+++ b/collapse-section/collapse-section.less
@@ -5,6 +5,7 @@
 		display: flex;
 		flex-direction: row;
 		align-items: center;
+		margin-bottom: 4px;
 
 		&.collapse-section__header--justified {
 			justify-content: space-between;
